--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="top_banner">
+    <div class="container">
+    <section>
+        <div class="half_width">
+            <h1>Welcome To </h1>
+            <h1><span>Shahriar's</span> World!</h1>
+            <h3>Full Stack Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, error atque unde, dicta quo voluptates deleniti illo ducimus corporis perspiciatis earum, nam possimus facilis eaque!</p>
+            <a class="btn" href="#">Hire me</a>
+        </div>
+        <div class="half_width">
+            <img src="Images/jhankar2.png" alt="">
+        </div>
+    </section>
+    </div>
+    </div>
+
+    <section class="dream_big">
+        <div class="half_width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+        <div class="half_width">
+            <h1>Dream Big</h1>
+            <h2>Web Developer</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore officia enim doloribus earum maxime hic accusantium optio assumenda. Unde hic ut nostrum cumque! Neque consequatur nihil sint, nesciunt quae maiores.</p>
+            <a href="#" target="_blank" class="btn">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
