--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,34 +10,71 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="top_banner">
-    <div class="container">
-    <section>
-        <div class="half_width">
-            <h1>Welcome To </h1>
-            <h1><span>Shahriar's</span> World!</h1>
-            <h3>Full Stack Web Developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, error atque unde, dicta quo voluptates deleniti illo ducimus corporis perspiciatis earum, nam possimus facilis eaque!</p>
-            <a class="btn" href="#">Hire me</a>
+        <div class="container">
+            <section>
+                <div class="row">
+                    <div class="half_width">
+                        <h1>Welcome To </h1>
+                        <h1><span>Shahriar's</span> World!</h1>
+                        <h3>Full Stack Web Developer</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, error atque unde, dicta quo
+                            voluptates deleniti illo ducimus corporis perspiciatis earum, nam possimus facilis eaque!
+                        </p>
+                        <a class="btn" href="#">Hire me</a>
+                    </div>
+                    <div class="half_width">
+                        <img src="Images/jhankar2.png" alt="">
+                    </div>
+                </div>
+            </section>
         </div>
-        <div class="half_width">
-            <img src="Images/jhankar2.png" alt="">
-        </div>
-    </section>
-    </div>
     </div>
 
     <section class="dream_big">
-        <div class="half_width">
-            <img src="images/jhankar.png" alt="">
-        </div>
-        <div class="half_width">
-            <h1>Dream Big</h1>
-            <h2>Web Developer</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore officia enim doloribus earum maxime hic accusantium optio assumenda. Unde hic ut nostrum cumque! Neque consequatur nihil sint, nesciunt quae maiores.</p>
-            <a href="#" target="_blank" class="btn">DOWNLOAD RESUME</a>
+        <div class="container">
+            <div class="row">
+                <div class="half_width">
+                    <img src="images/jhankar.png" alt="">
+                </div>
+                <div class="half_width">
+                    <h1>Dream Big</h1>
+                    <h2>Web Developer</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore officia enim doloribus earum
+                        maxime
+                        hic
+                        accusantium optio assumenda. Unde hic ut nostrum cumque! Neque consequatur nihil sint, nesciunt
+                        quae
+                        maiores.</p>
+                    <a href="#" target="_blank" class="btn">DOWNLOAD RESUME</a>
+                </div>
+            </div>
         </div>
     </section>
+    <section id="experiance_part">
+        <h1>Experiance</h1>
+        <div class="container">
+            <div class="row">
+                <div class=" ex_item_01 ex_description">
+                    <h1>Full Stack web Developer</h1>
+                    <h3>2024- Present | Pro level developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, doloremque quas placeat nostrum
+                        voluptatum assumenda quasi exercitationem quaerat quod nesciunt?</p>
+
+                </div>
+                <div class="ex_item_02 ex_description">
+                    <h1>Baby web developer</h1>
+                    <h3>2022 - 2022 | Hero learner </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias debitis officia sed ea distinctio
+                        architecto nesciunt. Odio magni natus quae.</p>
+                </div>
+            </div>
+    </section>
+    <footer>
+        <p>copyright&copy; programing-hero</p>
+    </footer>
 </body>
+
 </html>
