resolved the image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="half_width">
-                    <img src="images/jhankar.png" alt="">
+                    <img src="Images/jhankar.png" alt="">
                 </div>
                 <div class="half_width">
                     <h1>Dream Big</h1>
